--- a/src/main/resources/static/resources/pages/nav.html
+++ b/src/main/resources/static/resources/pages/nav.html
@@ -12,7 +12,7 @@
                   <a ui-sref=".bookmarkedListing" class="list-group-item d-flex justify-content-between align-items-center"><span><i class="fa fa-fw fa-bookmark-o"></i> Bookmarked Listing</span>
                     <span class="badge badge-primary badge-pill">10</span>
                   </a>
-                  <a ui-sref=".myListing" class="list-group-item d-flex justify-content-between align-items-center"><span><i class="fa fa-fw fa-bars"></i> My Listings</span>
+                  <a href="#/property/myListing" class="list-group-item d-flex justify-content-between align-items-center"><span><i class="fa fa-fw fa-bars"></i> My Listings</span>
                     <span class="badge badge-primary badge-pill">7</span>
                   </a>
                 </div>
