API integration for add and fetch listings for restaurants and gas stations

--- a/src/main/resources/static/resources/pages/addListingForm.html
+++ b/src/main/resources/static/resources/pages/addListingForm.html
@@ -26,8 +26,8 @@
                   </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
-                  <label for="type">Business Type*</label>
-                  <select id="type" name="businessType" ng-model="propertyMetaData.businessType"  ng-options="type.name for type in types"
+                  <label for="businessType">Business Type*</label>
+                  <select id="businessType" name="businessType" ng-model="propertyMetaData.businessType"  ng-options="type.name for type in types"
                           class="form-control form-control-md" required>
                       <option default selected style="color:#868e96;" value="">-- Choose Business Type --</option>
                   </select>
