--- a/src/main/resources/static/resources/pages/addListingForms/beautySalonForm.html
+++ b/src/main/resources/static/resources/pages/addListingForms/beautySalonForm.html
@@ -79,13 +79,13 @@
             <div class="row">
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Interior Area</label>
-                    <input type="text" class="form-control form-control-md" model="property.beautySalon.interiorArea"
-                           name="interiorArea" id="interiorArea" placeholder="Sq. Ft." >
+                    <input type="text" class="form-control form-control-md" model="property.beautySalon.interiorSqft"
+                           name="interiorSqft" id="interiorSqft" placeholder="Sq. Ft." >
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Seating Capacity</label>
-                    <input type="text" class="form-control form-control-md" model="property.beautySalon.seatingCapacity"
-                           name="seatingCapacity" id="seatingCapacity" placeholder="" >
+                    <input type="text" class="form-control form-control-md" model="property.beautySalon.capacity"
+                           name="capacity" id="capacity" placeholder="" >
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Approx Furniture cost</label>
@@ -99,18 +99,18 @@
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Number of Restroom</label>
-                    <input type="text" class="form-control form-control-md" model="property.beautySalon.numberOfRestroom"
-                           name="numberOfRestroom" id="numberOfRestroom" placeholder="" >
+                    <input type="text" class="form-control form-control-md" model="property.beautySalon.restrooms"
+                           name="restrooms" id="restrooms" placeholder="" >
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Last Renovated Date</label>
-                    <input type="text" class="form-control form-control-md" model="property.beautySalon.lastRenovatedDate"
-                           name="lastRenovatedDate" id="lastRenovatedDate" placeholder="" >
+                    <input type="text" class="form-control form-control-md" model="property.beautySalon.lastRenovation"
+                           name="lastRenovation" id="lastRenovation" placeholder="" >
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Waiting Area Capacity</label>
-                    <input type="text" class="form-control form-control-md" model="property.beautySalon.waitingAreaCapacity"
-                           name="waitingAreaCapacity" id="waitingAreaCapacity" placeholder="" >
+                    <input type="text" class="form-control form-control-md" model="property.beautySalon.waitingArea"
+                           name="waitingArea" id="waitingArea" placeholder="" >
                 </div>
             </div>
         </div>
@@ -137,18 +137,18 @@
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Number of Portable Pedicure Spa</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.pedicureSpa"
-                           name="pedicureSpa"  id="pedicureSpa" placeholder="">
+                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.portablePedicureSpa"
+                           name="portablePedicureSpa"  id="portablePedicureSpa" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Portable Trolleys</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.trolleys"
-                           name="trolleys"  id="trolleys" placeholder="">
+                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.nailSalonTrolleys"
+                           name="nailSalonTrolleys"  id="nailSalonTrolleys" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Pedicure Spa Chairs</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.spaChairs"
-                           name="spaChairs"  id="spaChairs" placeholder="">
+                    <input type="text" class="form-control form-control-md" ng-model="property.beautySalon.pedicureSpaChairs"
+                           name="pedicureSpaChairs"  id="pedicureSpaChairs" placeholder="">
                 </div>
             </div>
         </div>
