--- a/src/main/resources/static/resources/pages/addListingForms/restaurantForm.html
+++ b/src/main/resources/static/resources/pages/addListingForms/restaurantForm.html
@@ -2,7 +2,7 @@
 <div class="row form-group">
     <div class="col-md-6 col-lg-6 col-xl-6">
         <label>Cuisine Type</label>
-        <input type="text" class="form-control form-control-md" placeholder="" ng-model="property.rest.cuisineType">
+        <input type="text" class="form-control form-control-md" placeholder="" ng-model="property.rest.type">
     </div>
     <div class="col-md-6 col-lg-6 col-xl-6">
         <label>Description</label>
@@ -40,8 +40,8 @@
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Number of Cooking Range</label>
-                    <input type="text" class="form-control form-control-md" ng-model="property.rest.numberOfCookingRange"
-                           name="numberOfCookingRange" id="numberOfCookingRange" placeholder="">
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.cookingRange"
+                           name="cookingRange" id="cookingRange" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Exhaust Type</label>
@@ -62,33 +62,39 @@
 
             <label>Appliances</label>
             <div class="row form-group">
+
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
-                        <input type="checkbox" name="dishwasher" id="dishwasher" ng-model="property.rest.dishwasher"
-                               ng-checked="true">
-                        <label for="dishwasher">Dishwasher</label>
+                        <input type="checkbox" name="dishWasher" id="dishWasher" ng-model="property.rest.dishWasher"
+                               ng-init="property.rest.dishWasher='No'" ng-false-value="No" ng-true-value="Yes">
+                        <label for="dishWasher">Dishwasher</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="oven" id="oven" ng-model="property.rest.oven"
-                               ng-checked="true">
+                               ng-init="property.rest.oven='No'" ng-false-value="No" ng-true-value="Yes">
                         <label for="oven">Range/Oven</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="walkInFreezer" id="walkInFreezer" ng-model="property.rest.walkInFreezer"
-                               ng-checked="true">
+                               ng-init="property.rest.walkInFreezer='No'" ng-false-value="No" ng-true-value="Yes">
                         <label for="walkInFreezer">Walk in Freezer</label>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-6">
                     <div class="checkbox checkbox-inline">
                         <input type="checkbox" name="refrigerator" id="refrigerator" ng-model="property.rest.refrigerator"
-                               ng-checked="true">
+                               ng-init="property.rest.refrigerator='No'" ng-false-value="No" ng-true-value="Yes">
                         <label for="refrigerator">Refrigerator</label>
                     </div>
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Available Appliances</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.availableAppliances"
+                           name="availableAppliances" id="availableAppliances" placeholder="">
                 </div>
             </div>
         </div>
@@ -109,6 +115,11 @@
                            name="interiorSqft" id="interiorSqft" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Condition</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.condition"
+                           name="condition" id="condition" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Indoor Seating Capacity</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.indoorSeatingCapacity"
                            name="indoorSeatingCapacity" id="indoorSeatingCapacity" placeholder="">
@@ -122,7 +133,7 @@
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Last Renovation Date</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.lastRenovationDate"
-                           name="lastRenovationDate" id="lastRenovationDate" placeholder="">
+                           name="lastRenovationDate" id="lastRenovationDate" placeholder="yyyy-mm-dd">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Waiting Area Capacity</label>
@@ -138,6 +149,11 @@
                     <label>Interior Features</label>
                     <input type="text" class="form-control form-control-md" ng-model="property.rest.interiorFeatures"
                            name="interiorFeatures" id="interiorFeatures" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Interior Electronics</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.interiorElectronics"
+                           name="interiorElectronics" id="interiorElectronics" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Seating Arrangement</label>
@@ -169,6 +185,35 @@
                         <input type="radio" id="noInteriorRestroomsADA" ng-model="property.rest.interiorRestroomsADA" value="No">
                         <label for="noInteriorRestroomsADA">No</label>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!--Exterior-->
+    <div class="col-md-6 col-lg-6 col-xl-6">
+        <div ng-click="hideExterior = ! hideExterior">
+            <label ng-class="{'details-not-expanded': hideExterior, 'details-expanded': !hideExterior}" >Exterior Details</label>
+            <img ng-show="!hideExterior" ng-src="../../img/icon/downArrow.png" style="float: right"/>
+            <img ng-show="hideExterior" ng-src="../../img/icon/upArrow.png" style="float: right"/>
+        </div>
+        <div ng-show="!hideExterior">
+            <div class="row">
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Exterior Type</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.exteriorType"
+                           name="exteriorType" id="exteriorType" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Outdoor seating Capacity</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.outdoorSeatingCapacity"
+                           name="outdoorSeatingCapacity" id="outdoorSeatingCapacity" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Number of Parkings</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.parking"
+                           name="parking" id="parking" placeholder="">
                 </div>
             </div>
         </div>
@@ -218,28 +263,28 @@
             <div class="row">
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Revenue in Restaurant</label>
-                    <input type="text" class="form-control form-control-md" ng-mode="property.rest.avgRevenueInResto"
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.avgRevenueInResto"
                            name="avgRevenueInResto" id="avgRevenueInResto" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Revenue in Catering</label>
-                    <input type="text" class="form-control form-control-md" ng-mode="property.rest.avgRevenueCatering"
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.avgRevenueCatering"
                            name="avgRevenueCatering" id="avgRevenueCatering" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Revenue in To Go</label>
-                    <input type="text" class="form-control form-control-md" ng-mode="property.rest.avgRevenueToGo"
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.avgRevenueToGo"
                            name="avgRevenueToGo" id="avgRevenueToGo" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Revenue in Liquor</label>
-                    <input type="text" class="form-control form-control-md" ng-mode="property.rest.avgRevenueLiquer"
-                           name="avgRevenueLiquer" id="avgRevenueLiquer" placeholder="">
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.avgTevenueLiquer"
+                           name="avgTevenueLiquer" id="avgTevenueLiquer" placeholder="">
                 </div>
 
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Average Income</label>
-                    <input type="text" class="form-control form-control-md" ng-mode="property.rest.avgIncome"
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.avgIncome"
                            name="avgIncome" id="avgIncome" placeholder="">
                 </div>
             </div>
@@ -257,23 +302,71 @@
             <div class="row">
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Number of Full Time Employees</label>
-                    <input type="text" class="form-control form-control-md" ng-mode="property.rest.fulltime_emp"
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.fulltime_emp"
                            name="fulltime_emp" id="fulltime_emp" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Number of Part Time Employees</label>
-                    <input type="text" class="form-control form-control-md" ng-mode="property.rest.parttiem_emp"
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.parttiem_emp"
                            name="parttiem_emp" id="parttiem_emp" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Number of Certified Employees</label>
-                    <input type="text" class="form-control form-control-md" ng-mode="property.rest.certified_emp"
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.certified_emp"
                            name="certified_emp" id="certified_emp" placeholder="">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-xl-6">
                     <label>Total Employees</label>
-                    <input type="text" class="form-control form-control-md" ng-mode="property.rest.total_emp"
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.total_emp"
                            name="total_emp" id="total_emp" placeholder="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Surroundings Information-->
+    <div class="col-md-6 col-lg-6 col-xl-6">
+        <div ng-click="hideSurroundings = ! hideSurroundings">
+            <label ng-class="{'details-not-expanded': hideSurroundings, 'details-expanded': !hideSurroundings}" >Surroundings Information</label>
+            <img ng-show="!hideSurroundings" ng-src="../../img/icon/downArrow.png" style="float: right"/>
+            <img ng-show="hideSurroundings" ng-src="../../img/icon/upArrow.png" style="float: right"/>
+        </div>
+        <div ng-show="!hideSurroundings">
+            <div class="row">
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Crime Indicator</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.crimeIndicator"
+                           name="crimeIndicator" id="crimeIndicator" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Residential Area</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.residentialArea"
+                           name="residentialArea" id="residentialArea" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Security</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.security"
+                           name="security" id="security" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Surrounding Businesses</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.surroundingBusiness"
+                           name="surroundingBusiness" id="surroundingBusiness" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Walk Score</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.walkscore"
+                           name="walkscore" id="walkscore" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Wiki Demographic Link</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.wikiDemoLink"
+                           name="wikiDemoLink" id="wikiDemoLink" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-lg-6 col-xl-6">
+                    <label>Shopping Complex Traffic Score</label>
+                    <input type="text" class="form-control form-control-md" ng-model="property.rest.shoppingComplexTrafficScore"
+                           name="shoppingComplexTrafficScore" id="shoppingComplexTrafficScore" placeholder="">
                 </div>
             </div>
         </div>
